--- a/document/problem/系统负载.md
+++ b/document/problem/系统负载.md
@@ -1,4 +1,4 @@
-###1.[系统负载分析](https://mp.weixin.qq.com/s/Lz4cEt0LY_Fvqz2zAgOafw)
+### [系统负载分析](https://mp.weixin.qq.com/s/Lz4cEt0LY_Fvqz2zAgOafw)
 * 计算衡量标准 
  * load average: 3.04, 2.71, 2.45  （1 分钟、5 分钟、15 分钟机器的负载）
  * cpu 核数： grep "physical id"| wc -l	 
