--- a/document/problem/系统负载.md
+++ b/document/problem/系统负载.md
@@ -3,6 +3,6 @@
  * load average: 3.04, 2.71, 2.45  （1 分钟、5 分钟、15 分钟机器的负载）
  * cpu 核数： grep "physical id"| wc -l	 
  * 衡量标准 = 0.7 * cpu 核数
-* 获取现象id： top -H -p pid 
+* 获取现象id： top -H -p pid (P：按%CPU对进程排序  H：切换在进程列表中显示所有线程信息)
 * 转化为16十进制： printf "%x\n" 线程id
 * 查看线程栈信息 ： jstack pid |grep 线程id
