--- a/document/problem/系统负载.md
+++ b/document/problem/系统负载.md
@@ -1,8 +1,9 @@
 ### [系统负载分析](https://mp.weixin.qq.com/s/Lz4cEt0LY_Fvqz2zAgOafw)
-* 计算衡量标准 
- * load average: 3.04, 2.71, 2.45  （1 分钟、5 分钟、15 分钟机器的负载）
- * cpu 核数： grep "physical id"| wc -l	 
- * 衡量标准 = 0.7 * cpu 核数
+*   计算衡量标准 
+    * load average: 3.04, 2.71, 2.45  （1 分钟、5 分钟、15 分钟机器的负载）
+    * cpu 核数： grep "physical id"| wc -l	 
+    * 衡量标准 = 0.7 * cpu 核数
+* Jps:获取pid
 * 获取现象id： top -H -p pid (P：按%CPU对进程排序  H：切换在进程列表中显示所有线程信息)
 * 转化为16十进制： printf "%x\n" 线程id
 * 查看线程栈信息 ： jstack pid |grep 线程id
